// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultHandler("mock-one", []) 1`] = `
Array [
  Array [
    "mock-one: []",
  ],
]
`;

exports[`defaultHandler("mock-three", [true,{},"cool"]) 1`] = `
Array [
  Array [
    "mock-three: [true,{},\\"cool\\"]",
  ],
]
`;

exports[`defaultHandler("mock-two", [0,42]) 1`] = `
Array [
  Array [
    "mock-two: [0,42]",
  ],
]
`;
